# autodocs

./: Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  action.yml  agents.py  entrypoint.sh  github_client.py  main.py  pyproject.toml
examples/.github/workflows/: file-count.yml  readme-summary.yml
src/: file_counter.py  github_client.py  main.py
