   [project]
   name = "automated-docs"
   version = "0.1.0"
   description = "Automated utilities for repo file counting and PR updates."
   requires-python = ">=3.11"
   dependencies = [
       "requests>=2.32.3,<3",
       "openai>=1.40.0",
   ]

   [build-system]
   requires = ["setuptools>=64"]
   build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agents", "file_counter", "github_client", "main"]